--- a/carbon-angular-tutorial/package.json
+++ b/carbon-angular-tutorial/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@carbon/icons": "^10.45.0",
+    "@carbon/icons-angular": "^11.2.2",
     "carbon-components": "^10.51.0",
     "carbon-components-angular": "^4.57.6",
     "lint-fix": "^0.24.0",
