--- a/carbon-angular-tutorial/tsconfig.app.json
+++ b/carbon-angular-tutorial/tsconfig.app.json
@@ -3,7 +3,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    // "sourceMap": true,
+    // "declaration": false,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+  
   },
   "files": [
     "src/main.ts",
